...

        <include layout="@layout/include_login_divider" />

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

            <EditText
                android:id="@+id/email"
                style="@style/EditText.AppLogin"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

            <EditText
                android:id="@+id/password"
                style="@style/EditText.AppLogin"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/done"
            style="@style/Button.RoundedBlueButton"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/done"/>

        <Button
            android:id="@+id/forgotPassword"
...
